--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
+    text-decoration: none;
 }
+
 /* navbar */
 .navbar{
     height: 60px;
@@ -155,4 +157,27 @@
     font-size: 0.9rem;
     font-weight: 700;
     margin-right: 30px;
+}
+/** hero section **/
+.herosection{
+    background-image: url('/images/herosection.jpg');
+    background-size: cover;
+    height: 380px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.heromsg{
+    background-color: white;
+    color: black;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.85rem;
+    width: 80%;
+    margin-bottom: 25px;
+}
+.heromsg a{
+    color: #007185;
 }
