--- a/css/style.css
+++ b/css/style.css
@@ -228,3 +228,19 @@ footer{
     color: white;
     font-size: 0.85rem;
 }
+.foot-panel2{
+    background-color: #222f3d;
+    color: white;
+    height: 500px;
+    display: flex;
+    justify-content: space-evenly;
+}
+ul{
+    margin-top: 20px;
+}
+ul a{
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+    color: #dddddd;
+}
