--- a/css/style.css
+++ b/css/style.css
@@ -260,3 +260,16 @@ ul a{
     background-size: contain;
     background-repeat: no-repeat;
 }
+.foot-panel4{
+    background-color: #0F1111;
+    color: white;
+    height: 80px;
+    font-size: 0.7rem;
+    text-align: center;
+}
+.pages{
+    padding-top: 25px;
+}
+.copyright{
+    padding-top: 5px;
+}
